[package]
name = "tokio-jsoncodec"
description = "Integration between tokio-codec and serde_json"
version = "0.2.0"
edition = "2021"
authors = ["iliana weller <ilianaw@buttslol.net>"]
license = "MIT"
homepage = "https://github.com/ilianaw/tokio-jsoncodec"
repository = "https://github.com/ilianaw/tokio-jsoncodec"
readme = "README.md"

[[example]]
name = "echo"

[dependencies]
bytes = "^1.6.0"
serde = "^1.0.197"
serde_json = "^1.0.115"
tokio-util = { version = "^0.7.10", features = ["codec", "futures-util"] }

[dev-dependencies]
tokio = { version = "^1.37.0", features = ["rt", "net", "macros", "rt-multi-thread"] }
futures = "^0.3.30"
maplit = "^1.0.2"
serde = { version = "^1.0.197", features = ["derive"] }
